--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="notix_interstitial_text_color">@color/white</color>
+    <color name="notix_interstitial_text_background_color">@color/black</color>
 </resources>
