--- a/app/src/main/res/layout-land/activity_interstitial.xml
+++ b/app/src/main/res/layout-land/activity_interstitial.xml
@@ -36,7 +36,7 @@
 
     <TextView
         android:id="@+id/interstitial_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingHorizontal="8dp"
@@ -48,25 +48,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9"
         app:layout_constraintWidth_max="320dp"
+        app:layout_constraintWidth_percent="0.45"
         tools:text="Hello World! Hello World! Hello World!" />
 
     <TextView
         android:id="@+id/interstitial_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:lines="1"
-        android:maxWidth="320dp"
-        android:minWidth="200dp"
         android:paddingHorizontal="32dp"
         android:paddingVertical="16dp"
         android:textAllCaps="true"
         android:textSize="24sp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/interstitial_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/interstitial_description"
         app:layout_constraintTop_toTopOf="@id/interstitial_description"
+        app:layout_constraintWidth_percent="0.45"
         tools:text="Hello World" />
 
     <ImageView
