--- a/app/src/main/res/layout/activity_interstitial.xml
+++ b/app/src/main/res/layout/activity_interstitial.xml
@@ -52,12 +52,10 @@
 
     <TextView
         android:id="@+id/interstitial_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:lines="1"
-        android:maxWidth="320dp"
-        android:minWidth="200dp"
         android:paddingHorizontal="32dp"
         android:paddingVertical="16dp"
         android:textAllCaps="true"
@@ -67,6 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/interstitial_description"
+        app:layout_constraintWidth_percent="0.9"
         tools:text="Hello World" />
 
     <ImageView
