--- a/app/src/main/res/layout/activity_notifications_permissions.xml
+++ b/app/src/main/res/layout/activity_notifications_permissions.xml
@@ -5,6 +5,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:theme="@style/Theme.Transparent"
-    tools:context=".NotificationsPermissionsActivity">
+    tools:context=".push.permissions.NotificationsPermissionActivity">
 
 </FrameLayout>
